--- a/src/main/resources/edu/tseidler/mainwindow.fxml
+++ b/src/main/resources/edu/tseidler/mainwindow.fxml
@@ -23,7 +23,7 @@
     </left>
     <center>
         <VBox style="-fx-background-color: white">
-            <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS"/>
+            <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS" wrapText="true"/>
             <HBox>
                 <Label text="Due: ">
                     <font>
