--- a/src/main/resources/edu/tseidler/todo/todoitemDialog.fxml
+++ b/src/main/resources/edu/tseidler/todo/todoitemDialog.fxml
@@ -1,20 +1,17 @@
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <DialogPane fx:controller="edu.tseidler.todo.DialogController"
             xmlns:fx="http://javafx.com/fxml">
-    <headerText>
-        Enter new todo item...
-    </headerText>
+    <!--<headerText>-->
+    <!--Enter new todo item...-->
+    <!--</headerText>-->
     <content>
         <GridPane vgap="10" hgap="10">
             <Label text="short desciption" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
             <TextField fx:id="shortDescriptionField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
             <Label text="details" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextArea fx:id="detailsArea" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <TextArea fx:id="detailsArea" GridPane.rowIndex="1" GridPane.columnIndex="1"
+                      wrapText="true"/>
             <Label text="date" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
             <DatePicker fx:id="deadlinePicker" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </GridPane>
